--- a/hzert/index.html
+++ b/hzert/index.html
@@ -1,10 +1,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="src/style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body>
-  
+    <div class="container">
+      <button class="btn">mode</button>
+      <div class="card">test</div>
+    </div>
+  <script src="src/main.js"></script>
 </body>
 </html>
