--- a/hzert/index.html
+++ b/hzert/index.html
@@ -3,11 +3,18 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="src/style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"/>
   <title>Document</title>
 </head>
-    <div class="container">
+    <div class="site-header">
+      <h2>Music Playlist Builder</h2>
       <button class="btn">mode</button>
-      <div class="card">test</div>
+    </div>
+    <div class="container">
     </div>
   <script src="src/main.js"></script>
 </body>
