--- a/hzert/index.html
+++ b/hzert/index.html
@@ -12,7 +12,7 @@
 </head>
     <div class="site-header">
       <h2>Music Playlist Builder</h2>
-      <button class="btn">mode</button>
+      <button class="btn">Toggle Mode</button>
     </div>
     <div class="container">
     </div>
