--- a/hzert/index.html
+++ b/hzert/index.html
@@ -12,10 +12,11 @@
 </head>
     <div class="site-header">
       <h2>Music Playlist Builder</h2>
-      <button class="btn">Toggle Mode</button>
+      <button class="modebtn">Toggle Mode</button>
     </div>
-    <div class="container">
+    <div class="songcontainer">
     </div>
+    <button class="openbtn">Open Song Queue</button>
   <script src="src/main.js"></script>
 </body>
 </html>
