--- a/hzert/index.html
+++ b/hzert/index.html
@@ -8,7 +8,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"/>
-  <title>Document</title>
+  <title>Music Playlist Builder</title>
 </head>
     <div class="site-header">
       <h2>Music Playlist Builder</h2>
