--- a/hzert/index.html
+++ b/hzert/index.html
@@ -17,6 +17,12 @@
     <div class="songcontainer">
     </div>
     <button class="openbtn">Open Song Queue</button>
+
+    <div class="panel">
+      <h2>Song Queue</h2>
+      <div class="songs">
+      </div>
+    </div>
   <script src="src/main.js"></script>
 </body>
 </html>
