--- a/hzert/index.html
+++ b/hzert/index.html
@@ -16,12 +16,11 @@
     </div>
     <div class="songcontainer">
     </div>
-    <button class="openbtn">Open Song Queue</button>
-
     <div class="panel">
+      <button class="openbtn">Song Queue</button>
       <h2>Song Queue</h2>
-      <div class="songs">
-      </div>
+      <div class="songs"></div>
+    </div>
     </div>
   <script src="src/main.js"></script>
 </body>
