--- a/hzert/index.html
+++ b/hzert/index.html
@@ -14,6 +14,12 @@
       <h2>Music Playlist Builder</h2>
       <button class="modebtn">Toggle Mode</button>
     </div>
+    <div class="container">
+      <button class="filterbtn">All</button>
+      <button class="filterbtn">Rock</button>
+      <button class="filterbtn">Pop</button>
+      <button class="filterbtn">Video Game</button>
+    </div>
     <div class="songcontainer">
     </div>
     <div class="panel">
