--- a/hzert/index.html
+++ b/hzert/index.html
@@ -14,6 +14,7 @@
       <h2>Music Playlist Builder</h2>
       <button class="modebtn">Toggle Mode</button>
     </div>
+<body>
     <div class="container">
       <button class="filterbtn">All</button>
       <button class="filterbtn">Rock</button>
@@ -27,7 +28,7 @@
       <h2>Song Queue</h2>
       <div class="songs"></div>
     </div>
-    </div>
+    <button class="addbtn">Add Song</button>
   <script src="src/main.js"></script>
 </body>
 </html>
