--- a/hzert/index.html
+++ b/hzert/index.html
@@ -21,14 +21,16 @@
       <button class="filterbtn">Pop</button>
       <button class="filterbtn">Video Game</button>
     </div>
-    <div class="songcontainer">
-    </div>
+    <div class="songcontainer"></div>
     <div class="panel">
       <button class="openbtn">Song Queue</button>
       <h2>Song Queue</h2>
       <div class="songs"></div>
     </div>
-    <button class="addbtn">Add Song</button>
+    <div class="songadd">
+      <button class="addbtn">Add Song</button>
+    </div>
+
   <script src="src/main.js"></script>
 </body>
 </html>
