--- a/hzert/index.html
+++ b/hzert/index.html
@@ -1,20 +1,21 @@
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="src/style.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="src/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-      rel="stylesheet"/>
-  <title>Music Playlist Builder</title>
-</head>
-    <div class="site-header">
-      <h2>Music Playlist Builder</h2>
-      <button class="modebtn">Toggle Mode</button>
-    </div>
-<body>
+      rel="stylesheet"
+    />
+    <title>Music Playlist Builder</title>
+  </head>
+  <div class="site-header">
+    <h2>Music Playlist Builder</h2>
+    <button class="modebtn">Toggle Mode</button>
+  </div>
+  <body>
     <div class="container">
       <button class="filterbtn">All</button>
       <button class="filterbtn">Rock</button>
@@ -28,9 +29,13 @@
       <div class="songs"></div>
     </div>
     <div class="songadd">
+      <h2>Add New Song</h2>
+      <div class="image-preview" id="imagePreview"></div>
+      <input type="file" id="imageUpload" accept="image/*" />
+      <input type="text" id="songName" placeholder="Song Name" />
       <button class="addbtn">Add Song</button>
     </div>
 
-  <script src="src/main.js"></script>
-</body>
+    <script src="src/main.js"></script>
+  </body>
 </html>
