--- a/hzert/index.html
+++ b/hzert/index.html
@@ -31,11 +31,12 @@
     <div class="songadd">
       <h2>Add New Song</h2>
       <div class="image-preview" id="imagePreview"></div>
+      <label for="imageUpload" class="inputbtn">Upload Image</label>
       <input type="file" id="imageUpload" accept="image/*" />
-      <input type="text" id="songName" placeholder="Song Name" />
+      <input type="text" id="songName" class="inputbtn" placeholder="Song Name">
+
       <button class="addbtn">Add Song</button>
     </div>
-
     <script src="src/main.js"></script>
   </body>
 </html>
