save commit to github

--- a/hzert/index.html
+++ b/hzert/index.html
@@ -34,6 +34,8 @@
       <label for="imageUpload" class="inputbtn">Upload Image</label>
       <input type="file" id="imageUpload" accept="image/*" />
       <input type="text" id="songName" class="inputbtn" placeholder="Song Name">
+      <input type="text" id="artist" class="inputbtn" placeholder="Artist">
+      <input type="text" id="length" class="inputbtn" placeholder="Duration">
 
       <button class="addbtn">Add Song</button>
     </div>
