--- a/hzert/index.html
+++ b/hzert/index.html
@@ -31,8 +31,7 @@
     <div class="songadd">
       <h2>Add New Song</h2>
       <div class="image-preview" id="imagePreview"></div>
-      <label for="imageUpload" class="inputbtn">Upload Image</label>
-      <input type="file" id="imageUpload" accept="image/*" />
+      <input type="text" id="imageUpload" class="inputbtn" placeholder="Paste image URL">
       <input type="text" id="songName" class="inputbtn" placeholder="Song Name">
       <input type="text" id="artist" class="inputbtn" placeholder="Artist">
       <input type="text" id="length" class="inputbtn" placeholder="Duration">
