--- a/hzert/index.html
+++ b/hzert/index.html
@@ -35,7 +35,8 @@
       <input type="text" id="songName" class="inputbtn" placeholder="Song Name">
       <input type="text" id="artist" class="inputbtn" placeholder="Artist">
       <input type="text" id="length" class="inputbtn" placeholder="Duration">
-
+      <br><br>
+      <button class="createsongbtn">Create Song</button>
       <button class="addbtn">Add Song</button>
     </div>
     <script src="src/main.js"></script>
