--- a/hzert/index.html
+++ b/hzert/index.html
@@ -38,6 +38,6 @@
 
       <button class="addbtn">Add Song</button>
     </div>
-    <script src="src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
